--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ https://templatemo.com/tm-558-klassy-cafe
                     <div class="left-text-content">
                         <p>© Copyright Fillmore Coffee Co.
                         
-                        <br>Jl. H. Sidik No.7 Kuningan, Jakarta</p>
+                        <br>Jl. H. Sidik No.7, Kuningan, Jakarta</p>
                     </div>
                 </div>
             </div>
